# sc3-plugins

./: .gitmodules  CMakeLists.txt
source/SoundpipeUGens/: CMakeLists.txt  Padsynth.cpp
source/SoundpipeUGens/sc/: Padsynth.sc
source/SoundpipeUGens/sc/HelpSource/Classes/: Padsynth.schelp
